Renamed oneclick agent to oneclick Mesh Client

--- a/.gitignore
+++ b/.gitignore
@@ -4,13 +4,13 @@
 /nebula-arm6
 /nebula-darwin
 /nebula.exe
-/oneclick-agent
-/oneclick-agent-cert
-/oneclick-agent-cert.exe
-/oneclick-agent-arm
-/oneclick-agent-arm6
-/oneclick-agent-darwin
-/oneclick-agent.exe
+/oneclick-mesh-client
+/oneclick-mesh-client-cert
+/oneclick-mesh-client-cert.exe
+/oneclick-mesh-client-arm
+/oneclick-mesh-client-arm6
+/oneclick-mesh-client-darwin
+/oneclick-mesh-client.exe
 /cert/*.crt
 /cert/*.key
 /coverage.out
