--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,8 +21,8 @@ jobs:
       - name: Build
         run: |
           make BUILD_NUMBER="${GITHUB_REF#refs/tags/v}" release-linux release-freebsd
-          tar -zcv -C build/linux-amd64 -f build/oneclick-agent-only-linux-amd64.tar.gz oneclick-agent
-          tar -zcv -C build/linux-amd64 -f build/oneclick-agent-cert-only-linux-amd64.tar.gz oneclick-agent-cert
+          tar -zcv -C build/linux-amd64 -f build/oneclick-mesh-client-only-linux-amd64.tar.gz oneclick-mesh-client
+          tar -zcv -C build/linux-amd64 -f build/oneclick-mesh-client-cert-only-linux-amd64.tar.gz oneclick-mesh-client-cert
           mkdir release
           mv build/*.tar.gz release
 
@@ -49,12 +49,12 @@ jobs:
           echo $Env:GITHUB_REF.Substring(11)
           mkdir build\windows-amd64
           $Env:GOARCH = "amd64"
-          go build -trimpath -ldflags "-X main.Build=$($Env:GITHUB_REF.Substring(11))" -o build\windows-amd64\oneclick-agent.exe ./cmd/nebula-service
-          go build -trimpath -ldflags "-X main.Build=$($Env:GITHUB_REF.Substring(11))" -o build\windows-amd64\oneclick-agent-cert.exe ./cmd/nebula-cert
+          go build -trimpath -ldflags "-X main.Build=$($Env:GITHUB_REF.Substring(11))" -o build\windows-amd64\oneclick-mesh-client.exe ./cmd/nebula-service
+          go build -trimpath -ldflags "-X main.Build=$($Env:GITHUB_REF.Substring(11))" -o build\windows-amd64\oneclick-mesh-client-cert.exe ./cmd/nebula-cert
           mkdir build\windows-arm64
           $Env:GOARCH = "arm64"
-          go build -trimpath -ldflags "-X main.Build=$($Env:GITHUB_REF.Substring(11))" -o build\windows-arm64\oneclick-agent.exe ./cmd/nebula-service
-          go build -trimpath -ldflags "-X main.Build=$($Env:GITHUB_REF.Substring(11))" -o build\windows-arm64\oneclick-agent-cert.exe ./cmd/nebula-cert
+          go build -trimpath -ldflags "-X main.Build=$($Env:GITHUB_REF.Substring(11))" -o build\windows-arm64\oneclick-mesh-client.exe ./cmd/nebula-service
+          go build -trimpath -ldflags "-X main.Build=$($Env:GITHUB_REF.Substring(11))" -o build\windows-arm64\oneclick-mesh-client-cert.exe ./cmd/nebula-cert
           mkdir build\dist\windows
           mv dist\windows\wintun build\dist\windows\
 
@@ -76,15 +76,15 @@ jobs:
         run: |
           cd windows-latest
           cp windows-amd64/* .
-          zip -r oneclick-agent-windows-amd64.zip oneclick-agent.exe oneclick-agent-cert.exe dist
+          zip -r oneclick-mesh-client-windows-amd64.zip oneclick-mesh-client.exe oneclick-mesh-client-cert.exe dist
           cp windows-arm64/* .
-          zip -r oneclick-agent-windows-arm64.zip oneclick-agent.exe oneclick-agent-cert.exe dist
+          zip -r oneclick-mesh-client-windows-arm64.zip oneclick-mesh-client.exe oneclick-mesh-client-cert.exe dist
 
       - name: Zip Windows agent only
         run: |
           cd windows-latest
           cp windows-amd64/* .
-          zip -r oneclick-agent-only-windows-amd64.zip oneclick-agent.exe dist
+          zip -r oneclick-mesh-client-only-windows-amd64.zip oneclick-mesh-client.exe dist
 
       - name: Create sha256sum
         run: |
@@ -94,13 +94,13 @@ jobs:
               cd $dir
               if [ "$dir" = windows-latest ]
               then
-                sha256sum <windows-amd64/oneclick-agent.exe | sed 's=-$=oneclick-agent-windows-amd64.zip/oneclick-agent.exe='
-                sha256sum <windows-amd64/oneclick-agent-cert.exe | sed 's=-$=oneclick-agent-windows-amd64.zip/oneclick-agent-cert.exe='
-                sha256sum <windows-arm64/oneclick-agent.exe | sed 's=-$=oneclick-agent-windows-arm64.zip/oneclick-agent.exe='
-                sha256sum <windows-arm64/oneclick-agent-cert.exe | sed 's=-$=oneclick-agent-windows-arm64.zip/oneclick-agent-cert.exe='
-                sha256sum oneclick-agent-windows-amd64.zip
-                sha256sum oneclick-agent-only-windows-amd64.zip
-                sha256sum oneclick-agent-windows-arm64.zip
+                sha256sum <windows-amd64/oneclick-mesh-client.exe | sed 's=-$=oneclick-mesh-client-windows-amd64.zip/oneclick-mesh-client.exe='
+                sha256sum <windows-amd64/oneclick-mesh-client-cert.exe | sed 's=-$=oneclick-mesh-client-windows-amd64.zip/oneclick-mesh-client-cert.exe='
+                sha256sum <windows-arm64/oneclick-mesh-client.exe | sed 's=-$=oneclick-mesh-client-windows-arm64.zip/oneclick-mesh-client.exe='
+                sha256sum <windows-arm64/oneclick-mesh-client-cert.exe | sed 's=-$=oneclick-mesh-client-windows-arm64.zip/oneclick-mesh-client-cert.exe='
+                sha256sum oneclick-mesh-client-windows-amd64.zip
+                sha256sum oneclick-mesh-client-only-windows-amd64.zip
+                sha256sum oneclick-mesh-client-windows-arm64.zip
               else
                 for v in *.tar.gz
                 do
@@ -142,8 +142,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./windows-latest/oneclick-agent-windows-amd64.zip
-          asset_name: oneclick-agent-windows-amd64.zip
+          asset_path: ./windows-latest/oneclick-mesh-client-windows-amd64.zip
+          asset_name: oneclick-mesh-client-windows-amd64.zip
           asset_content_type: application/zip
 
       - name: Upload windows-amd64 agent only
@@ -152,8 +152,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./windows-latest/oneclick-agent-only-windows-amd64.zip
-          asset_name: oneclick-agent-only-windows-amd64.zip
+          asset_path: ./windows-latest/oneclick-mesh-client-only-windows-amd64.zip
+          asset_name: oneclick-mesh-client-only-windows-amd64.zip
           asset_content_type: application/zip
 
       - name: Upload linux-amd64 agent only
@@ -162,8 +162,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./linux-latest/oneclick-agent-only-linux-amd64.tar.gz
-          asset_name: oneclick-agent-only-linux-amd64.tar.gz
+          asset_path: ./linux-latest/oneclick-mesh-client-only-linux-amd64.tar.gz
+          asset_name: oneclick-mesh-client-only-linux-amd64.tar.gz
           asset_content_type: application/zip
 
       - name: Upload linux-amd64 agent-cert only
@@ -172,8 +172,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./linux-latest/oneclick-agent-cert-only-linux-amd64.tar.gz
-          asset_name: oneclick-agent-cert-only-linux-amd64.tar.gz
+          asset_path: ./linux-latest/oneclick-mesh-client-cert-only-linux-amd64.tar.gz
+          asset_name: oneclick-mesh-client-cert-only-linux-amd64.tar.gz
           asset_content_type: application/zip
 
       - name: Upload windows-arm64
@@ -182,8 +182,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./windows-latest/oneclick-agent-windows-arm64.zip
-          asset_name: oneclick-agent-windows-arm64.zip
+          asset_path: ./windows-latest/oneclick-mesh-client-windows-arm64.zip
+          asset_name: oneclick-mesh-client-windows-arm64.zip
           asset_content_type: application/zip
 
       - name: Upload linux-amd64
@@ -192,8 +192,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./linux-latest/oneclick-agent-linux-amd64.tar.gz
-          asset_name: oneclick-agent-linux-amd64.tar.gz
+          asset_path: ./linux-latest/oneclick-mesh-client-linux-amd64.tar.gz
+          asset_name: oneclick-mesh-client-linux-amd64.tar.gz
           asset_content_type: application/gzip
 
       - name: Upload linux-386
@@ -202,8 +202,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./linux-latest/oneclick-agent-linux-386.tar.gz
-          asset_name: oneclick-agent-linux-386.tar.gz
+          asset_path: ./linux-latest/oneclick-mesh-client-linux-386.tar.gz
+          asset_name: oneclick-mesh-client-linux-386.tar.gz
           asset_content_type: application/gzip
 
       - name: Upload linux-ppc64le
@@ -212,8 +212,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./linux-latest/oneclick-agent-linux-ppc64le.tar.gz
-          asset_name: oneclick-agent-linux-ppc64le.tar.gz
+          asset_path: ./linux-latest/oneclick-mesh-client-linux-ppc64le.tar.gz
+          asset_name: oneclick-mesh-client-linux-ppc64le.tar.gz
           asset_content_type: application/gzip
 
       - name: Upload linux-arm-5
@@ -222,8 +222,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./linux-latest/oneclick-agent-linux-arm-5.tar.gz
-          asset_name: oneclick-agent-linux-arm-5.tar.gz
+          asset_path: ./linux-latest/oneclick-mesh-client-linux-arm-5.tar.gz
+          asset_name: oneclick-mesh-client-linux-arm-5.tar.gz
           asset_content_type: application/gzip
 
       - name: Upload linux-arm-6
@@ -232,8 +232,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./linux-latest/oneclick-agent-linux-arm-6.tar.gz
-          asset_name: oneclick-agent-linux-arm-6.tar.gz
+          asset_path: ./linux-latest/oneclick-mesh-client-linux-arm-6.tar.gz
+          asset_name: oneclick-mesh-client-linux-arm-6.tar.gz
           asset_content_type: application/gzip
 
       - name: Upload linux-arm-7
@@ -242,8 +242,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./linux-latest/oneclick-agent-linux-arm-7.tar.gz
-          asset_name: oneclick-agent-linux-arm-7.tar.gz
+          asset_path: ./linux-latest/oneclick-mesh-client-linux-arm-7.tar.gz
+          asset_name: oneclick-mesh-client-linux-arm-7.tar.gz
           asset_content_type: application/gzip
 
       - name: Upload linux-arm64
@@ -252,8 +252,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./linux-latest/oneclick-agent-linux-arm64.tar.gz
-          asset_name: oneclick-agent-linux-arm64.tar.gz
+          asset_path: ./linux-latest/oneclick-mesh-client-linux-arm64.tar.gz
+          asset_name: oneclick-mesh-client-linux-arm64.tar.gz
           asset_content_type: application/gzip
 
       - name: Upload linux-mips
@@ -262,8 +262,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./linux-latest/oneclick-agent-linux-mips.tar.gz
-          asset_name: oneclick-agent-linux-mips.tar.gz
+          asset_path: ./linux-latest/oneclick-mesh-client-linux-mips.tar.gz
+          asset_name: oneclick-mesh-client-linux-mips.tar.gz
           asset_content_type: application/gzip
 
       - name: Upload linux-mipsle
@@ -272,8 +272,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./linux-latest/oneclick-agent-linux-mipsle.tar.gz
-          asset_name: oneclick-agent-linux-mipsle.tar.gz
+          asset_path: ./linux-latest/oneclick-mesh-client-linux-mipsle.tar.gz
+          asset_name: oneclick-mesh-client-linux-mipsle.tar.gz
           asset_content_type: application/gzip
 
       - name: Upload linux-mips64
@@ -282,8 +282,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./linux-latest/oneclick-agent-linux-mips64.tar.gz
-          asset_name: oneclick-agent-linux-mips64.tar.gz
+          asset_path: ./linux-latest/oneclick-mesh-client-linux-mips64.tar.gz
+          asset_name: oneclick-mesh-client-linux-mips64.tar.gz
           asset_content_type: application/gzip
 
       - name: Upload linux-mips64le
@@ -292,8 +292,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./linux-latest/oneclick-agent-linux-mips64le.tar.gz
-          asset_name: oneclick-agent-linux-mips64le.tar.gz
+          asset_path: ./linux-latest/oneclick-mesh-client-linux-mips64le.tar.gz
+          asset_name: oneclick-mesh-client-linux-mips64le.tar.gz
           asset_content_type: application/gzip
 
       - name: Upload linux-mips-softfloat
@@ -302,8 +302,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./linux-latest/oneclick-agent-linux-mips-softfloat.tar.gz
-          asset_name: oneclick-agent-linux-mips-softfloat.tar.gz
+          asset_path: ./linux-latest/oneclick-mesh-client-linux-mips-softfloat.tar.gz
+          asset_name: oneclick-mesh-client-linux-mips-softfloat.tar.gz
           asset_content_type: application/gzip
 
       - name: Upload linux-riscv64
@@ -312,8 +312,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./linux-latest/oneclick-agent-linux-riscv64.tar.gz
-          asset_name: oneclick-agent-linux-riscv64.tar.gz
+          asset_path: ./linux-latest/oneclick-mesh-client-linux-riscv64.tar.gz
+          asset_name: oneclick-mesh-client-linux-riscv64.tar.gz
           asset_content_type: application/gzip
 
       - name: Upload freebsd-amd64
@@ -322,6 +322,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./linux-latest/oneclick-agent-freebsd-amd64.tar.gz
-          asset_name: oneclick-agent-freebsd-amd64.tar.gz
+          asset_path: ./linux-latest/oneclick-mesh-client-freebsd-amd64.tar.gz
+          asset_name: oneclick-mesh-client-freebsd-amd64.tar.gz
           asset_content_type: application/gzip
