--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -64,6 +64,53 @@ jobs:
           name: windows-latest
           path: build
 
+      build-darwin:
+        name: Build Universal Darwin
+      env:
+        HAS_SIGNING_CREDS: ${{ secrets.AC_USERNAME != '' }}
+      runs-on: macos-11
+      steps:
+        - name: Set up Go 1.19
+          uses: actions/setup-go@v2
+          with:
+            go-version: 1.19
+
+        - name: Checkout code
+          uses: actions/checkout@v2
+
+        - name: Import certificates
+          if: env.HAS_SIGNING_CREDS == 'true'
+          uses: Apple-Actions/import-codesign-certs@v1
+          with:
+            p12-file-base64: ${{ secrets.APPLE_DEVELOPER_CERTIFICATE_P12_BASE64 }}
+            p12-password: ${{ secrets.APPLE_DEVELOPER_CERTIFICATE_PASSWORD }}
+
+        - name: Build, sign, and notarize
+          env:
+            AC_USERNAME: ${{ secrets.AC_USERNAME }}
+            AC_PASSWORD: ${{ secrets.AC_PASSWORD }}
+          run: |
+            rm -rf release
+            mkdir release
+            make BUILD_NUMBER="${GITHUB_REF#refs/tags/v}" service build/darwin-amd64/oneclick-mesh-client build/darwin-amd64/oneclick-mesh-client-cert
+            make BUILD_NUMBER="${GITHUB_REF#refs/tags/v}" service build/darwin-arm64/oneclick-mesh-client build/darwin-arm64/oneclick-mesh-client-cert
+            lipo -create -output ./release/oneclick-mesh-client ./build/darwin-amd64/oneclick-mesh-client ./build/darwin-arm64/oneclick-mesh-client
+            lipo -create -output ./release/oneclick-mesh-client-cert ./build/darwin-amd64/oneclick-mesh-client-cert ./build/darwin-arm64/oneclick-mesh-client-cert
+            if [ -n "$AC_USERNAME" ]; then
+              codesign -s "73E61C89083BB124F2B51FB39CE0C8F4371C6C60" -f -v --timestamp --options=runtime -i "net.defined.oneclick-mesh-client" ./release/oneclick-mesh-client
+              codesign -s "73E61C89083BB124F2B51FB39CE0C8F4371C6C60" -f -v --timestamp --options=runtime -i "net.defined.oneclick-mesh-client-cert" ./release/oneclick-mesh-client-cert
+            fi
+            zip -j release/oneclick-mesh-client-darwin.zip release/oneclick-mesh-client-cert release/oneclick-mesh-client
+            if [ -n "$AC_USERNAME" ]; then
+              xcrun notarytool submit ./release/oneclick-mesh-client-darwin.zip --team-id "6F8PY896LX" --apple-id "$AC_USERNAME" --password "$AC_PASSWORD" --wait
+            fi
+
+        - name: Upload artifacts
+          uses: actions/upload-artifact@v2
+          with:
+            name: darwin-latest
+            path: ./release/*
+
   release:
     name: Create and Upload Release
     needs: [build-linux, build-windows]
