--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -113,7 +113,7 @@ jobs:
 
   release:
     name: Create and Upload Release
-    needs: [build-linux, build-windows]
+    needs: [build-linux, build-darwin, build-windows]
     runs-on: ubuntu-latest
     steps:
       - name: Download artifacts
@@ -182,6 +182,16 @@ jobs:
           asset_path: ./SHASUM256.txt
           asset_name: SHASUM256.txt
           asset_content_type: text/plain
+
+      - name: Upload darwin zip
+        uses: actions/upload-release-asset@v1.0.1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./darwin-latest/oneclick-mesh-client-darwin.zip
+          asset_name: oneclick-mesh-client-darwin.zip
+          asset_content_type: application/zip
 
       - name: Upload windows-amd64
         uses: actions/upload-release-asset@v1.0.1
