--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,7 @@ jobs:
 
       - name: Build
         run: |
-          make BUILD_NUMBER="${GITHUB_REF#refs/tags/v}" release-linux release-freebsd
+          make BUILD_NUMBER="${GITHUB_REF#refs/tags/v}" release-linux-amd64
           tar -zcv -C build/linux-amd64 -f build/oneclick-mesh-client-only-linux-amd64.tar.gz oneclick-mesh-client
           tar -zcv -C build/linux-amd64 -f build/oneclick-mesh-client-cert-only-linux-amd64.tar.gz oneclick-mesh-client-cert
           mkdir release
@@ -51,10 +51,6 @@ jobs:
           $Env:GOARCH = "amd64"
           go build -trimpath -ldflags "-X main.Build=$($Env:GITHUB_REF.Substring(11))" -o build\windows-amd64\oneclick-mesh-client.exe ./cmd/nebula-service
           go build -trimpath -ldflags "-X main.Build=$($Env:GITHUB_REF.Substring(11))" -o build\windows-amd64\oneclick-mesh-client-cert.exe ./cmd/nebula-cert
-          mkdir build\windows-arm64
-          $Env:GOARCH = "arm64"
-          go build -trimpath -ldflags "-X main.Build=$($Env:GITHUB_REF.Substring(11))" -o build\windows-arm64\oneclick-mesh-client.exe ./cmd/nebula-service
-          go build -trimpath -ldflags "-X main.Build=$($Env:GITHUB_REF.Substring(11))" -o build\windows-arm64\oneclick-mesh-client-cert.exe ./cmd/nebula-cert
           mkdir build\dist\windows
           mv dist\windows\wintun build\dist\windows\
 
@@ -100,10 +96,8 @@ jobs:
             codesign -s "F2C1E03492179A729ABB455D7E181B7F4E2E0334" -f -v --timestamp --options=runtime -i "oneclick.oneclick-mesh-client" ./release/oneclick-mesh-client
             codesign -s "F2C1E03492179A729ABB455D7E181B7F4E2E0334" -f -v --timestamp --options=runtime -i "oneclick.oneclick-mesh-client-cert" ./release/oneclick-mesh-client-cert
           fi
-          zip -j release/oneclick-mesh-client-darwin.zip release/oneclick-mesh-client-cert release/oneclick-mesh-client
           zip -j release/oneclick-mesh-client-only-darwin.zip release/oneclick-mesh-client
           if [ -n "$AC_USERNAME" ]; then
-            xcrun notarytool submit ./release/oneclick-mesh-client-darwin.zip --team-id "6F8PY896LX" --apple-id "$AC_USERNAME" --password "$AC_PASSWORD" --wait
             xcrun notarytool submit ./release/oneclick-mesh-client-only-darwin.zip --team-id "6F8PY896LX" --apple-id "$AC_USERNAME" --password "$AC_PASSWORD" --wait
           fi
 
@@ -121,49 +115,11 @@ jobs:
       - name: Download artifacts
         uses: actions/download-artifact@v2
 
-      - name: Zip Windows
-        run: |
-          cd windows-latest
-          cp windows-amd64/* .
-          zip -r oneclick-mesh-client-windows-amd64.zip oneclick-mesh-client.exe oneclick-mesh-client-cert.exe dist
-          cp windows-arm64/* .
-          zip -r oneclick-mesh-client-windows-arm64.zip oneclick-mesh-client.exe oneclick-mesh-client-cert.exe dist
-
       - name: Zip Windows agent only
         run: |
           cd windows-latest
           cp windows-amd64/* .
           zip -r oneclick-mesh-client-only-windows-amd64.zip oneclick-mesh-client.exe dist
-
-      - name: Create sha256sum
-        run: |
-          for dir in linux-latest darwin-latest windows-latest
-          do
-            (
-              cd $dir
-              if [ "$dir" = windows-latest ]
-              then
-                sha256sum <windows-amd64/oneclick-mesh-client.exe | sed 's=-$=oneclick-mesh-client-windows-amd64.zip/oneclick-mesh-client.exe='
-                sha256sum <windows-amd64/oneclick-mesh-client-cert.exe | sed 's=-$=oneclick-mesh-client-windows-amd64.zip/oneclick-mesh-client-cert.exe='
-                sha256sum <windows-arm64/oneclick-mesh-client.exe | sed 's=-$=oneclick-mesh-client-windows-arm64.zip/oneclick-mesh-client.exe='
-                sha256sum <windows-arm64/oneclick-mesh-client-cert.exe | sed 's=-$=oneclick-mesh-client-windows-arm64.zip/oneclick-mesh-client-cert.exe='
-                sha256sum oneclick-mesh-client-windows-amd64.zip
-                sha256sum oneclick-mesh-client-only-windows-amd64.zip
-                sha256sum oneclick-mesh-client-windows-arm64.zip
-              elif [ "$dir" = darwin-latest ]
-              then
-                sha256sum <oneclick-mesh-client-darwin.zip | sed 's=-$=oneclick-mesh-client-darwin.zip='
-                sha256sum <oneclick-mesh-client | sed 's=-$=oneclick-mesh-client-darwin.zip/oneclick-mesh-client='
-                sha256sum <oneclick-mesh-client-cert | sed 's=-$=oneclick-mesh-client-darwin.zip/oneclick-mesh-client-cert='
-              else
-                for v in *.tar.gz
-                do
-                  sha256sum $v
-                  tar zxf $v --to-command='sh -c "sha256sum | sed s=-$='$v'/$TAR_FILENAME="'
-                done
-              fi
-            )
-          done | sort -k 2 >SHASUM256.txt
 
       - name: Create Release
         id: create_release
@@ -180,26 +136,6 @@ jobs:
       ## Upload assets (I wish we could just upload the whole folder at once...
       ##
 
-      - name: Upload SHASUM256.txt
-        uses: actions/upload-release-asset@v1.0.1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./SHASUM256.txt
-          asset_name: SHASUM256.txt
-          asset_content_type: text/plain
-
-      - name: Upload darwin zip
-        uses: actions/upload-release-asset@v1.0.1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./darwin-latest/oneclick-mesh-client-darwin.zip
-          asset_name: oneclick-mesh-client-darwin.zip
-          asset_content_type: application/zip
-
       - name: Upload darwin zip agent only
         uses: actions/upload-release-asset@v1.0.1
         env:
@@ -208,16 +144,6 @@ jobs:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./darwin-latest/oneclick-mesh-client-only-darwin.zip
           asset_name: oneclick-mesh-client-only-darwin.zip
-          asset_content_type: application/zip
-
-      - name: Upload windows-amd64
-        uses: actions/upload-release-asset@v1.0.1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./windows-latest/oneclick-mesh-client-windows-amd64.zip
-          asset_name: oneclick-mesh-client-windows-amd64.zip
           asset_content_type: application/zip
 
       - name: Upload windows-amd64 agent only
@@ -249,153 +175,3 @@ jobs:
           asset_path: ./linux-latest/oneclick-mesh-client-cert-only-linux-amd64.tar.gz
           asset_name: oneclick-mesh-client-cert-only-linux-amd64.tar.gz
           asset_content_type: application/zip
-
-      - name: Upload windows-arm64
-        uses: actions/upload-release-asset@v1.0.1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./windows-latest/oneclick-mesh-client-windows-arm64.zip
-          asset_name: oneclick-mesh-client-windows-arm64.zip
-          asset_content_type: application/zip
-
-      - name: Upload linux-amd64
-        uses: actions/upload-release-asset@v1.0.1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./linux-latest/oneclick-mesh-client-linux-amd64.tar.gz
-          asset_name: oneclick-mesh-client-linux-amd64.tar.gz
-          asset_content_type: application/gzip
-
-      - name: Upload linux-386
-        uses: actions/upload-release-asset@v1.0.1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./linux-latest/oneclick-mesh-client-linux-386.tar.gz
-          asset_name: oneclick-mesh-client-linux-386.tar.gz
-          asset_content_type: application/gzip
-
-      - name: Upload linux-ppc64le
-        uses: actions/upload-release-asset@v1.0.1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./linux-latest/oneclick-mesh-client-linux-ppc64le.tar.gz
-          asset_name: oneclick-mesh-client-linux-ppc64le.tar.gz
-          asset_content_type: application/gzip
-
-      - name: Upload linux-arm-5
-        uses: actions/upload-release-asset@v1.0.1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./linux-latest/oneclick-mesh-client-linux-arm-5.tar.gz
-          asset_name: oneclick-mesh-client-linux-arm-5.tar.gz
-          asset_content_type: application/gzip
-
-      - name: Upload linux-arm-6
-        uses: actions/upload-release-asset@v1.0.1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./linux-latest/oneclick-mesh-client-linux-arm-6.tar.gz
-          asset_name: oneclick-mesh-client-linux-arm-6.tar.gz
-          asset_content_type: application/gzip
-
-      - name: Upload linux-arm-7
-        uses: actions/upload-release-asset@v1.0.1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./linux-latest/oneclick-mesh-client-linux-arm-7.tar.gz
-          asset_name: oneclick-mesh-client-linux-arm-7.tar.gz
-          asset_content_type: application/gzip
-
-      - name: Upload linux-arm64
-        uses: actions/upload-release-asset@v1.0.1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./linux-latest/oneclick-mesh-client-linux-arm64.tar.gz
-          asset_name: oneclick-mesh-client-linux-arm64.tar.gz
-          asset_content_type: application/gzip
-
-      - name: Upload linux-mips
-        uses: actions/upload-release-asset@v1.0.1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./linux-latest/oneclick-mesh-client-linux-mips.tar.gz
-          asset_name: oneclick-mesh-client-linux-mips.tar.gz
-          asset_content_type: application/gzip
-
-      - name: Upload linux-mipsle
-        uses: actions/upload-release-asset@v1.0.1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./linux-latest/oneclick-mesh-client-linux-mipsle.tar.gz
-          asset_name: oneclick-mesh-client-linux-mipsle.tar.gz
-          asset_content_type: application/gzip
-
-      - name: Upload linux-mips64
-        uses: actions/upload-release-asset@v1.0.1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./linux-latest/oneclick-mesh-client-linux-mips64.tar.gz
-          asset_name: oneclick-mesh-client-linux-mips64.tar.gz
-          asset_content_type: application/gzip
-
-      - name: Upload linux-mips64le
-        uses: actions/upload-release-asset@v1.0.1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./linux-latest/oneclick-mesh-client-linux-mips64le.tar.gz
-          asset_name: oneclick-mesh-client-linux-mips64le.tar.gz
-          asset_content_type: application/gzip
-
-      - name: Upload linux-mips-softfloat
-        uses: actions/upload-release-asset@v1.0.1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./linux-latest/oneclick-mesh-client-linux-mips-softfloat.tar.gz
-          asset_name: oneclick-mesh-client-linux-mips-softfloat.tar.gz
-          asset_content_type: application/gzip
-
-      - name: Upload linux-riscv64
-        uses: actions/upload-release-asset@v1.0.1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./linux-latest/oneclick-mesh-client-linux-riscv64.tar.gz
-          asset_name: oneclick-mesh-client-linux-riscv64.tar.gz
-          asset_content_type: application/gzip
-
-      - name: Upload freebsd-amd64
-        uses: actions/upload-release-asset@v1.0.1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./linux-latest/oneclick-mesh-client-freebsd-amd64.tar.gz
-          asset_name: oneclick-mesh-client-freebsd-amd64.tar.gz
-          asset_content_type: application/gzip
