--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,7 +7,7 @@ name: Create release and upload binaries
 
 jobs:
   build-linux:
-    name: Build Linux All
+    name: Build Linux amd64
     runs-on: ubuntu-latest
     steps:
       - name: Set up Go 1.18
@@ -50,7 +50,6 @@ jobs:
           mkdir build\windows-amd64
           $Env:GOARCH = "amd64"
           go build -trimpath -ldflags "-X main.Build=$($Env:GITHUB_REF.Substring(11))" -o build\windows-amd64\oneclick-mesh-client.exe ./cmd/nebula-service
-          go build -trimpath -ldflags "-X main.Build=$($Env:GITHUB_REF.Substring(11))" -o build\windows-amd64\oneclick-mesh-client-cert.exe ./cmd/nebula-cert
           mkdir build\dist\windows
           mv dist\windows\wintun build\dist\windows\
 
@@ -88,13 +87,11 @@ jobs:
         run: |
           rm -rf release
           mkdir release
-          make BUILD_NUMBER="${GITHUB_REF#refs/tags/v}" service build/darwin-amd64/oneclick-mesh-client build/darwin-amd64/oneclick-mesh-client-cert
-          make BUILD_NUMBER="${GITHUB_REF#refs/tags/v}" service build/darwin-arm64/oneclick-mesh-client build/darwin-arm64/oneclick-mesh-client-cert
+          make BUILD_NUMBER="${GITHUB_REF#refs/tags/v}" service build/darwin-amd64/oneclick-mesh-client
+          make BUILD_NUMBER="${GITHUB_REF#refs/tags/v}" service build/darwin-arm64/oneclick-mesh-client
           lipo -create -output ./release/oneclick-mesh-client ./build/darwin-amd64/oneclick-mesh-client ./build/darwin-arm64/oneclick-mesh-client
-          lipo -create -output ./release/oneclick-mesh-client-cert ./build/darwin-amd64/oneclick-mesh-client-cert ./build/darwin-arm64/oneclick-mesh-client-cert
           if [ -n "$AC_USERNAME" ]; then
             codesign -s "F2C1E03492179A729ABB455D7E181B7F4E2E0334" -f -v --timestamp --options=runtime -i "oneclick.oneclick-mesh-client" ./release/oneclick-mesh-client
-            codesign -s "F2C1E03492179A729ABB455D7E181B7F4E2E0334" -f -v --timestamp --options=runtime -i "oneclick.oneclick-mesh-client-cert" ./release/oneclick-mesh-client-cert
           fi
           zip -j release/oneclick-mesh-client-only-darwin.zip release/oneclick-mesh-client
           if [ -n "$AC_USERNAME" ]; then
