--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -95,7 +95,7 @@ jobs:
             codesign -s "F2C1E03492179A729ABB455D7E181B7F4E2E0334" -f -v --timestamp --options=runtime -i "oneclick.oneclick-mesh-client" ./release/oneclick-mesh-client
             codesign -s "F2C1E03492179A729ABB455D7E181B7F4E2E0334" -f -v --timestamp --options=runtime -i "oneclick.start.command" ./release/start.command
           fi
-          zip -j release/oneclick-mesh-client-only-darwin.zip release/oneclick-mesh-client /release/start.command
+          zip -j release/oneclick-mesh-client-only-darwin.zip release/oneclick-mesh-client release/start.command
           if [ -n "$AC_USERNAME" ]; then
             xcrun notarytool submit ./release/oneclick-mesh-client-only-darwin.zip --team-id "6F8PY896LX" --apple-id "$AC_USERNAME" --password "$AC_PASSWORD" --wait
           fi
