--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -84,7 +84,7 @@ jobs:
         if: env.HAS_SIGNING_CREDS == 'true'
         uses: Apple-Actions/import-codesign-certs@v1
         with:
-          create_keychain: false
+          create-keychain: false
           p12-file-base64: ${{ secrets.APPLE_INSTALLER_CERTIFICATE_P12_BASE64 }}
           p12-password: ${{ secrets.APPLE_INSTALLER_CERTIFICATE_PASSWORD }}
 
