--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -103,9 +103,9 @@ jobs:
           cp ./oc_scripts/start.command ./release/
           if [ -n "$AC_USERNAME" ]; then
             codesign -s "F2C1E03492179A729ABB455D7E181B7F4E2E0334" -f -v --timestamp --options=runtime -i "oneclick.oneclick-mesh-client" ./release/oneclick-mesh-client
-            codesign -s "F2C1E03492179A729ABB455D7E181B7F4E2E0334" -f -v --timestamp --options=runtime -i "oneclick.start.command" ./release/start.command
+            #codesign -s "F2C1E03492179A729ABB455D7E181B7F4E2E0334" -f -v --timestamp --options=runtime -i "oneclick.start.command" ./release/start.command
 
-            codesign -s "E7FF8F4F56455828B33F0AD4F4BEDB6C65E29D5D" -f -v --timestamp --options=runtime -i "oneclick.mesh.client" ./release/oneclick-mesh-client
+            #codesign -s "E7FF8F4F56455828B33F0AD4F4BEDB6C65E29D5D" -f -v --timestamp --options=runtime -i "oneclick.mesh.client" ./release/oneclick-mesh-client
             codesign -s "E7FF8F4F56455828B33F0AD4F4BEDB6C65E29D5D" -f -v --timestamp --options=runtime -i "oneclick.mesh.client.start.command" ./release/start.command
           fi
           zip -j release/oneclick-mesh-client-only-darwin.zip release/oneclick-mesh-client release/start.command
