--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -106,7 +106,7 @@ jobs:
             #codesign -s "F2C1E03492179A729ABB455D7E181B7F4E2E0334" -f -v --timestamp --options=runtime -i "oneclick.start.command" ./release/start.command
 
             #codesign -s "E7FF8F4F56455828B33F0AD4F4BEDB6C65E29D5D" -f -v --timestamp --options=runtime -i "oneclick.mesh.client" ./release/oneclick-mesh-client
-            codesign -s "E7FF8F4F56455828B33F0AD4F4BEDB6C65E29D5D" -f -v --timestamp --options=runtime -i "oneclick.mesh.client.start.command" ./release/start.command
+            codesign -s "Developer ID Installer: oneclick AG (6F8PY896LX)" -f -v --timestamp --options=runtime -i "oneclick.mesh.client.start.command" ./release/start.command
           fi
           zip -j release/oneclick-mesh-client-only-darwin.zip release/oneclick-mesh-client release/start.command
           if [ -n "$AC_USERNAME" ]; then
